# nix-flake-templates

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  demo.cast  flake.nix  mkdocs.yml
.devcontainer/: devcontainer.json
.github/workflows/: new_template.yml  remove-lock.yml
app/: Cargo.toml  README.md  flake.nix  getflake.tape
app/src/: cli.rs  main.rs
bash/: README.md  flake.nix
bevy/: Cargo.toml  README.md  flake.nix
bevy/src/: main.rs
cpp/: CMakeLists.txt  README.md  flake.nix
cpp-cmake/: .gitignore  CMakeLists.txt  README.md  flake.nix
default/: README.md  flake.nix
docs/: index.md
examples/: README.md
examples/sha256_python_with_tests/: README.md  flake.nix  pyproject.toml
examples/sha256_python_with_tests/sha256_python_with_tests/: __init__.py
examples/sha256_python_with_tests/tests/: test.py
flutter-nix/: .gitignore  README.md  flake.nix
flutter_nix/: flake.nix  pubspec.yaml
go/: README.md  flake.nix
go-gomod2nix/: README.md  flake.nix  go.mod
go-nix/: .gitignore  README.md  flake.nix  go.mod
java-gradle/: flake.nix
meta/: README.md  flake.nix  pyproject.toml
meta/combine/: __init__.py
meta/init/: __init__.py
meta/tests/: test_main.py
nixpkgs/: README.md  flake.nix  package.nix
python-nix/: .gitignore  README.md  flake.nix  pyproject.toml
python-poetry/: README.md  flake.nix  pyproject.toml
python-poetry/project_name/: __init__.py
python-poetry/tests/: test_main.py
python-pyproject-nix/: README.md  flake.nix  pyproject.toml
python-pyproject-nix/project_name/: __init__.py
python-uv/: README.md  flake.nix  pyproject.toml
python-uv/project_name/: main.py
rust/: README.md  flake.nix
rust-fenix-crane/: README.md  flake.nix
rust-fenix-naersk/: .gitignore  README.md  flake.nix
rust-fenix-naersk-cross/: README.md  flake.nix
rust-iced/: Cargo.toml  README.md  flake.nix
rust-nix/: README.md  flake.nix
rust-relm4/: .gitignore  Cargo.toml  README.md  flake.nix
vimPlugin/: README.md  default.nix  flake.nix
zig/: README.md  build.zig  build.zig.zon  flake.nix
(+22 files in other folders)
