[tool.poetry]
name = "meta"
version = "0.1.0"
description = ""
authors = ["nulladmin1 <shrey.deogade@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "init"}
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "init:main"
combine = "combine:main"
