[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">= 3.12"
readme = "README.md"

dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
app = "app:main"
