[project]
name = "sha256_python_with_tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">= 3.11"
readme = "README.md"

dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
sha256_python_with_tests = "sha256_python_with_tests:main"
